# SARVAM

./: .env.example  .gitignore  README.md  docker-compose.yml  explanation.txt
backend/: Dockerfile  Dockerfile.gateway  pyproject.toml
backend/agent_core/: __init__.py
backend/agent_core/agents/: __init__.py  cancellation.py  language_agent.py  prompt_templates.py  task_agent.py  translation_policy.py  untrusted.py
backend/agent_core/api/: __init__.py  load_test_fakes.py  main.py
backend/agent_core/llm_adapter/: __init__.py  _http_common.py  _sse.py  base.py  config.py
backend/agent_core/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
backend/agent_core/persistence/: chat_store.py
backend/agent_core/rag/: __init__.py  embeddings.py  store.py
backend/agent_core/security/: __init__.py  auth.py  confirmation.py  output_validation.py  pii.py  rate_limit.py  retention.py
backend/agent_core/speech/: __init__.py  audio_validation.py  chunker.py  clients.py  fallback_tts.py  sarvam_stt.py  sarvam_tts.py  tts_provider_policy.py
backend/scripts/: _dotenv.py  chaos_test.py  ingest_rag_chunks.py  load_test.py  run_dev_gateway.py  run_dev_server.py
backend/tests/: _fake_ws.py  _fakes.py  _language_fixtures.py  test_agentic_loop_real_tools.py  test_anthropic_provider.py  test_api_chat.py  test_api_chat_stream.py  test_audio_validation.py  test_auth.py  test_cancellation.py  test_chat_store.py  test_chunker.py  test_config.py  test_confirmation.py  test_converse_ws.py  test_dev_login.py  test_duplex_session.py  test_failure_policy.py  test_fallback_tts.py  test_frontend_no_secrets.py  test_gemini_provider.py  test_graph.py  test_language_agent.py  test_metrics.py  test_native_tool_calling.py  test_observability.py  test_openai_compatible_provider.py  test_output_validation.py  test_pii.py  test_prompt_injection.py  test_prompt_templates.py  test_rag_embeddings.py  test_rag_store.py  test_rag_tool.py  test_rate_limit.py  test_retention.py  test_router.py  test_sarvam_stt.py  test_sarvam_tts.py  test_session_state_machine.py  (+10 more)
(+66 files in other folders)
